<resources>
    <string name="app_name">Devs Portfolio</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="social_network">Social Login</string>
    <string name="view">View</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem
        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="hello_blank_fragment1">Profile Fragment</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="facebook_app_id">2100423613573087</string>
    <string name="fb_login_protocol_scheme">fb2100423613573087</string>
    <string name="facebook_login_success">Log in successful</string>
    <string name="facebook_login_cancel">Facebook login cancelled</string>
    <string name="facebook_login_error">Facebook login failed</string>
    <string name="interest">Interests</string>
    <string name="projects">Projects</string>
    <string name="feeds">Feeds</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">
        Feeds Fragment to start here Thanks team for your patience and support on this project
    </string>
    <string name="placeholder_project_name">Project Name</string>
    <string name="placeholder_project_short_description">Short Description</string>
    <string name="placeholder_project_long_description">Long Description</string>
    <string name="placeholder_project_likes_count">Number of likes</string>
    <string name="hello_blank">Interest to go here waiting for this layout.</string>
    <string name="project_screenshot">Project_screenshot</string>
    <string name="drawer_messages_title">Messages</string>
    <string name="drawer_manage_profile_title">Manage Profile</string>
    <string name="drawer_about_title">About</string>
    <string name="drawer_help_title">Help</string>
    <string name="drawer_notifications_title">Notifications</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="drawer_logout_title">Log out</string>
    <string name="sample_user_name" translatable="false">UserName</string>
    <string name="sample_user_profession" translatable="false">Profession</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="submit">Submit</string>
    <string name="intro">Intro</string>
    <string name="pref_login_status_key">pref_logging_status</string>
    <string name="contactus">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="terms">Terms and Conditions</string>
    <string name="back">Back</string>
    <string name="about">About</string>
    <string name="about_detail" translatable="false">The project is meant to help programmers have a portfolio sharing platform,
        programmers are welcome to share their projects and they can interact and show employers what
        they have done in the app, one does not have to create a website to showcase his/her work.
        The project was done by team members participating in the Grow With Google Scholarship Program offered by Google|Udacity.The team
        was happy to get into phase two of the Grow With Google Scholarship.\n\nThis is a Social App for Developers to share
        their portfolio and also get to interact with other users through messages and sharing projects, programmers
        are welcome to share their projects and they can interact and show employers what they have done in the app,
        one doesnt have to create a website to showcase his/her work.
    </string>
    <string name="about_developer_heading">Developers</string>
    <string name="about_developer_name1">Madonah Syombua</string>
    <string name="about_developer_name2">Rado RAMBININTSOA</string>
    <string name="about_developer_name3">Emmanuel Adewale</string>
    <string name="about_developer_name4">Maher Soua</string>
    <string name="about_developer_name5">Clever Chuk</string>
    <string name="about_developer_name6">Hemantkumar Nimje</string>
    <string name="about_developer_name7">Jantz Carney</string>
    <string name="acknowledgement">Acknowledgment</string>
    <string name="google">Thank you Google | Udacity.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Devs Name</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="home">Home</string>
    <string name="dummy">This activity will be started as feeds</string>
    <string name="dummy_position">Android Developer</string>
    <string name="dummy_following_count_value">425</string>
    <string name="following">Following</string>
    <string name="dummy_followers_count_value">27K</string>
    <string name="followers">Followers</string>
    <string name="dummy_project_count_value">434</string>
    <string name="dummy_interest_title">Mathematics</string>
    <string name="dummy_interest_count_value">745</string>
    <string name="posts">Posts</string>
    <string name="dummy_likes_count_value">14K</string>
    <string name="likes">Likes</string>
    <string name="add_feeds">Add Feeds</string>
    <string name="hint">Name</string>
    <string name="hint_description">Description</string>
    <string name="period">Period</string>
    <string name="start">Start</string>
    <string name="month1">Month</string>
    <string name="expensesall">ExpenseAll</string>
    <string name="write_something">What\'s Happening</string>
    <string name="comments">Comments</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="newpost">New Post</string>
    <string name="postingas">Posting as</string>
    <string name="time">2 minutes ago</string>
    <string name="post">This is a post</string>
    <string name="two">2</string>
    <string-array name="search_suggestions">
        <item>How do I change my password?</item>
        <item>How do I change my profile photo?</item>
        <item>Why do birds suddenly appear?</item>
        <item>What is life?</item>
    </string-array>
    <string name="theme_manger">Theme Manager</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_info">Press here to enable dark mode</string>
    <string name="camera_image">camera image</string>
    <string name="something_went_wrong">Whoops something went wrong</string>
    <string name="comment">Comment</string>
    <string name="posting_as">Posting as</string>
    <string name="new_post">What\'s on your mind?</string>
    <string name="s_followers">\'s followers</string>
    <string name="is_following">is following</string>
    <string name="deleted_post">Deleted post</string>
    <string name="commenting_as">Commenting as</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_post">Do you really want to delete this post?</string>
    <string name="deleted_comment">Deleted comment</string>
    <string name="delete_comment">Do you really want to delete this comment?</string>
    <string name="sent_comment">Sent comment</string>
    <string name="follow">Follow</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="unfollow">Unfollow</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="not_a_member_register"><u>Not a member? Register!</u></string>
    <string name="already_a_member_sign_in"><u>Already a member? Sign in!</u></string>
    <string name="show_comments">Show comments</string>
    <string name="nothing_to_display" translatable="false">empty</string>
    <string name="forgotpassword">forgot password?</string>
    <string name="message">We will implement message here</string>
    <string name="image">Image</string>
    <string name="timeout">timeout</string>
    <string name="help">Help</string>
</resources>