<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/messages"
            android:icon="@drawable/ic_chat"
            android:title="@string/drawer_messages_title" />
        <item
            android:id="@+id/manage_profile"
            android:icon="@drawable/ic_edit"
            android:title="@string/drawer_manage_profile_title" />
       <!-- <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/drawer_notifications_title"
            />-->
    </group>

    <!-- Title undecided for the below group, if decided add below -->
    <item android:title="">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/drawer_settings_title" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info"
                android:title="@string/drawer_about_title" />
            <item
                android:id="@+id/help"
                android:icon="@drawable/ic_help"
                android:title="@string/drawer_help_title" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/drawer_logout_title" />
        </menu>
    </item>
</menu>