<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.madonasyombua.growwithgoogleteamproject.activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.madonasyombua.growwithgoogleteamproject.activities.SettingsActivity$ThemeMangerPreferenceFragment"
        android:icon="@drawable/ic_change_theme"
        android:title="@string/theme_manger" />

    <header
        android:fragment="com.madonasyombua.growwithgoogleteamproject.activities.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.madonasyombua.growwithgoogleteamproject.activities.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
