<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Apache License
  ~
  ~ Copyright (c) 2019 Madona Syombua
  ~ Licensed under the Apache License,Version 2.0 (the License);
  ~ you may not use this file except in compliance with the License.
  ~
  ~
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under         the License is distributed on an AS IS BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,         either express or implied.
  ~ See the License for the specific language governing permissions         and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- social feeds to be displayed here-->

    <item
        android:id="@+id/action_feeds"
        android:enabled="true"
        android:icon="@drawable/ic_home_white"
        android:title="@string/feeds"
        app:showAsAction="ifRoom" />
   <!-- interests to go here-->
    <item
        android:id="@+id/action_interests"
        android:enabled="true"
       android:icon="@drawable/ic_info_white"
        android:title="@string/interest"
        app:showAsAction="ifRoom" />
    <!-- project portfolio -->

    <item
        android:id="@+id/action_projects"
        android:enabled="true"
        android:icon="@drawable/briefcase_outline"
        android:title="@string/projects"
        app:showAsAction="ifRoom" />

    <!-- profile activity -->
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>