<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.madonasyombua.growwithgoogleteamproject.ui.fragment.HelpFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:elevation="6dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true">

            <ImageButton
                android:id="@+id/backToMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_action_back"
                android:contentDescription="@string/back" />
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>


    <!-- Faq page loads faq for user -->
    <TextView
        android:id="@+id/faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:fontFamily="@font/raleway"
        android:text="@string/faq"
        android:paddingTop="4dp"
        android:textColor="@color/grey_600"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        />
    <!-- contact us page, loads contact us dialog -->
    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:fontFamily="@font/raleway"
        android:text="@string/contactus"
        android:paddingTop="4dp"
        android:paddingBottom="10dp"
        android:textColor="@color/grey_600"
        android:textSize="18sp"
        android:textStyle="bold"
        />


    <!-- terms and privacy, loads terms and conditions for users -->
    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:fontFamily="@font/raleway"
        android:text="@string/terms"
        android:paddingTop="4dp"
        android:paddingBottom="10dp"
        android:textColor="@color/grey_600"
        android:textSize="18sp"
        android:textStyle="bold"
        />


</LinearLayout>
