<!--
  Copyright (c) 2018 Madona Syombua

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.madonasyombua.growwithgoogleteamproject.ui.fragment.InterestFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Profile summary layout -->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background_color_of_toolbars"
            android:textColor="?attr/textcolor"

            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/profile_summary_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:text="@string/about_developer_name1"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/profile_summary_position"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/profile_summary_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/dummy_position"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/followers_count_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_summary_name" />


            <TextView
                android:id="@+id/following_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/dummy_following_count_value"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/followers_count_value"
                app:layout_constraintEnd_toEndOf="@+id/following_count_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/following_count_title" />

            <TextView
                android:id="@+id/following_count_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/followers_count_title"
                app:layout_constraintEnd_toStartOf="@+id/followers_count_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/followers_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/dummy_followers_count_value"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/followers_count_title"
                app:layout_constraintEnd_toEndOf="@+id/followers_count_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/followers_count_title"
                app:layout_constraintTop_toBottomOf="@+id/profile_summary_position" />

            <TextView
                android:id="@+id/followers_count_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/followers"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/project_count_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/following_count_title"
                app:layout_constraintTop_toBottomOf="@+id/followers_count_value" />


            <TextView
                android:id="@+id/project_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/dummy_project_count_value"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/followers_count_value"
                app:layout_constraintEnd_toEndOf="@+id/project_count_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/project_count_title" />


            <TextView
                android:id="@+id/project_count_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projects"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/followers_count_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/followers_count_title" />


        </android.support.constraint.ConstraintLayout>


        <!-- Recyclerview for the interest cards -->


        <android.support.v7.widget.RecyclerView
            android:id="@+id/interest_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"></android.support.v7.widget.RecyclerView>


    </android.support.constraint.ConstraintLayout>
</FrameLayout>
